# NoiseSuppression

./: .gitignore  AppConfig.hpp  AudioInput.cpp  AudioInput.h  AudioProcessing.cpp  AudioProcessing.h  CMakeLists.txt  Model.cpp  Model.h  NoiseSuppression.cpp  NoiseSuppression.h  config.cfg  main.cpp  model23kgru.onnx
Buffer/: RingBuffer.hpp
Model/: ConvModel.py  encoding.py
librosa/: librosa.h
